# vercel-serverless

./: .gitignore  deploy.sh  package.json  pyproject.toml  requirements.txt  vercel.json
src/: main.py
