[tool.poetry]
name = "vercel-serverless"
version = "0.1.0"
description = ""
authors = ["Tristan Bester <tristanbester@gmail.com>"]
readme = "README.md"
packages = [{include = "vercel_serverless"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
